Website contents have been modified

--- a/index.html
+++ b/index.html
@@ -228,13 +228,14 @@ th, td {
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#about">ABOUT</a></li>
-        <li><a href="#login">LOGIN</a></li>
+        <li><a href="#mission">OUR VALUES</a></li>
+        <!-- <li><a href="#login">LOGIN</a></li>
         <li><a href="#dashboard">DASHBOARD</a></li>
         <li><a href="#mybookings">My BOOKINGS</a></li>
-        <li><a href="#book">BOOK</a></li>
+        <li><a href="#book">BOOK</a></li> -->
         <li><a href="#services">SERVICES</a></li>
         <li><a href="#portfolio">PORTFOLIO</a></li>
-        <li><a href="#pricing">PRICING</a></li>
+        <!-- <li><a href="#pricing">PRICING</a></li> -->
         <li><a href="#contact">CONTACT</a></li>
       </ul>
     </div>
@@ -242,8 +243,8 @@ th, td {
 </nav>
 
 <div class="jumbotron text-center">
-  <h1>Smart Cab Services</h1>
-  <p>We specialize in local travel</p>
+  <h1>Thinking Things Technologies</h1>
+  <!-- <p>We specialize in local travel</p> -->
     <!--
   <form>
     <div class="input-group">
@@ -262,8 +263,9 @@ th, td {
     <div class="col-sm-8">
       <h2>About Company Page</h2><br>
       <h4>Thinking Things Technologies(TTT) LLP is one of the fastest growing Engineering and IT Solutions venture.</h4><br>
-      <p>We aspire to mark our indelible impression in our area of services by providing quality solutions to our customers in a timely manner at affordable cost.</p>
-      <br><button class="btn btn-default btn-lg">Get in Touch</button>
+      <p>Our team comprises of people with expertise in providing solutions to Engineering and Manufacturing departments of various global organizations. We have gained deep understanding of typical challenges that an organization faces during a new/existing product lifecycle or trying to embrace disruptive paradigm shifts like Model-Based Enterprise (MBE) and Sensor-enabled Factory.</p>
+      <p>Our exposure spans products in Aerospace, Power Generation, Oil &nbsp; Gas industries. We have people experienced in standardizing processes and automating PLM/CAD/CAM/CMM software. Our team with an average experience of ~15 years in Siemens applications (NX CAD/CAM/CMM/Teamcenter) along with strong IT &nbasp; engineering skills, can help our customers to achieve their desired quality &nbsp; financial objectives.</p>
+      <!-- <br><button class="btn btn-default btn-lg">Get in Touch</button> -->
     </div>
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-signal logo"></span>
@@ -271,16 +273,16 @@ th, td {
   </div>
 </div>
 
-<div class="container-fluid bg-grey">
+<div id="mission" class="container-fluid bg-grey">
   <div class="row">
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-globe logo slideanim"></span>
     </div>
     <div class="col-sm-8">
       <h2>Our Values</h2><br>
-      <h4><strong>MISSION:</strong> Our mission lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h4><br>
-      <p><strong>VISION:</strong> Our vision Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      <h4>We aspire to mark our indelible impression in our area of services by providing quality solutions to our customers in a timely manner at affordable cost.</h4><br>
+      <!-- <p><strong>VISION:</strong> Our vision Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> -->
     </div>
   </div>
 </div>
@@ -333,96 +335,6 @@ th, td {
     <td class="booked"></td>
     <td></td>
   </tr>
-  <tr>
-    <td></td>
-    <td></td>
-    <td  class="booked"></td>
-    <td></td>
-   </tr>
-  <tr>
-    <td class="blocked"></td>
-    <td></td>
-    <td  class="booked"></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td  class="blocked"></td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td></td>
-    <td></td>
-    <td class="booked"></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td></td>
-    <td></td>
-    <td  class="booked"></td>
-    <td></td>
-   </tr>
-  <tr>
-    <td class="blocked"></td>
-    <td></td>
-    <td  class="booked"></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td  class="blocked"></td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td></td>
-    <td></td>
-    <td class="booked"></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td></td>
-    <td></td>
-    <td  class="booked"></td>
-    <td></td>
-   </tr>
-  <tr>
-    <td class="blocked"></td>
-    <td></td>
-    <td  class="booked"></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td  class="blocked"></td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td></td>
-    <td></td>
-    <td class="booked"></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td></td>
-    <td></td>
-    <td  class="booked"></td>
-    <td></td>
-   </tr>
-  <tr>
-    <td class="blocked"></td>
-    <td></td>
-    <td  class="booked"></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td  class="blocked"></td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
 
 </table>
 </div>
@@ -457,42 +369,7 @@ th, td {
     <td>$100</td>
     <td>$100</td>
   </tr>
-  <tr>
-    <td>Peter</td>
-    <td>Griffin</td>
-    <td>$100</td>
-    <td>Peter</td>
-    <td>Griffin</td>
-    <td>$100</td>
-    <td>Peter</td>
-    <td>Griffin</td>
-    <td>$100</td>
-    <td>$100</td>
-   </tr>
-  <tr>
-     <td>Peter</td>
-    <td>Griffin</td>
-    <td>$100</td>
-    <td>Peter</td>
-    <td>Griffin</td>
-    <td>$100</td>
-    <td>Peter</td>
-    <td>Griffin</td>
-    <td>$100</td>
-    <td>$100</td>
-  </tr>
-  <tr>
-     <td>Peter</td>
-    <td>Griffin</td>
-    <td>$100</td>
-    <td>Peter</td>
-    <td>Griffin</td>
-    <td>$100</td>
-    <td>Peter</td>
-    <td>Griffin</td>
-    <td>$100</td>
-    <td>$100</td>
-  </tr>
+
 </table>
 </div>
 
@@ -526,33 +403,6 @@ th, td {
           <input class="form-control" id="fromTime" name="fromTime" placeholder="From Time" type="email" required>
         </div>
       </div>
-
-      <div class="row">
-        <div class="col-sm-6 form-group">
-          <input class="form-control" id="toDate" name="toDate" placeholder="To Date" type="text" required>
-        </div>
-        <div class="col-sm-6 form-group">
-          <input class="form-control" id="toTime" name="toTime" placeholder="To Time" type="email" required>
-        </div>
-      </div>
-
-
-      <div class="row">
-        <div class="col-sm-6 form-group">
-          <input class="form-control" id="Source" name="Source" placeholder="Source" type="text" required>
-        </div>
-        <div class="col-sm-6 form-group">
-          <input class="form-control" id="Destination" name="Destination" placeholder="Destination" type="email" required>
-        </div>
-      </div>
-
-      <textarea class="form-control" id="bookComments" name="bookComments" placeholder="Comment" rows="3"></textarea><br>
-      <div class="row">
-        <div class="col-sm-12 form-group">
-          <button class="btn btn-default pull-right" type="submit">Confirm Booking</button>
-        </div>
-      </div>
-    </div>
   </div>
 </div>
 
@@ -565,22 +415,22 @@ th, td {
   <div class="row slideanim">
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-off logo-small"></span>
-      <h4>POWER</h4>
-      <p>Lorem ipsum dolor sit amet..</p>
+      <h4>CAD/CAM/CMM SOLUTIONS </h4>
+      <!-- <p>Lorem ipsum dolor sit amet..</p> -->
     </div>
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-heart logo-small"></span>
-      <h4>LOVE</h4>
-      <p>Lorem ipsum dolor sit amet..</p>
+      <h4>INTERNET OF THINGS</h4>
+      <!-- <p>Lorem ipsum dolor sit amet..</p> -->
     </div>
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-lock logo-small"></span>
-      <h4>JOB DONE</h4>
-      <p>Lorem ipsum dolor sit amet..</p>
+      <h4>WEB / MOBILE SOLUTIONS</h4>
+      <!-- <p>Lorem ipsum dolor sit amet..</p> -->
     </div>
   </div>
   <br><br>
-  <div class="row slideanim">
+  <!-- <div class="row slideanim">
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-leaf logo-small"></span>
       <h4>GREEN</h4>
@@ -596,7 +446,7 @@ th, td {
       <h4 style="color:#303030;">HARD WORK</h4>
       <p>Lorem ipsum dolor sit amet..</p>
     </div>
-  </div>
+  </div> -->
 </div>
 
 <!-- Container (Portfolio Section) -->
