--- a/index.html
+++ b/index.html
@@ -289,17 +289,17 @@ th, td {
 
 
 <!-- Container (login Section) -->
-<div id="login" class="container-fluid">
+<!-- <div id="login" class="container-fluid">
   <h2 class="text-center">LOGIN</h2>
   <div class="row">
     <div class="col-sm-5">
-      <p>Please enter your Credentials</p>
+      <p>Please enter your Credentials</p> -->
         <!--
       <p><span class="glyphicon glyphicon-map-marker"></span> Chicago, US</p>
       <p><span class="glyphicon glyphicon-phone"></span> +00 1515151515</p>
       <p><span class="glyphicon glyphicon-envelope"></span> myemail@something.com</p>
       -->
-    </div>
+    <!-- </div>
     <div class="col-sm-7 slideanim">
       <div class="row">
         <div class="col-sm-6 form-group">
@@ -315,12 +315,12 @@ th, td {
           <button class="btn btn-default pull-right" type="submit">Enter</button>
         </div>
       </div>
-    </div>
-  </div>
-</div>
+    </div> -->
+  <!-- </div>
+</div> -->
 
 <!-- Container (Dashboard Section) -->
-<div id="dashboard" class="container-fluid">
+<!-- <div id="dashboard" class="container-fluid">
   <h2 class="text-center">DASHBOARD</h2>
 <table>
   <tr  >
@@ -337,12 +337,12 @@ th, td {
   </tr>
 
 </table>
-</div>
+</div> -->
 
 
 
 <!-- Container (mybookings Section) -->
-<div id="mybookings" class="container-fluid">
+<!-- <div id="mybookings" class="container-fluid">
   <h2 class="text-center">My Bookings</h2>
 <table>
   <tr>
@@ -371,21 +371,21 @@ th, td {
   </tr>
 
 </table>
-</div>
+</div> -->
 
 
 <!-- Container (Book Section) -->
-<div id="book" class="container-fluid bg-grey">
+<!-- <div id="book" class="container-fluid bg-grey">
   <h2 class="text-center">BOOK</h2>
   <div class="row">
     <div class="col-sm-5">
-      <p>Please enter your booking details here.</p>
+      <p>Please enter your booking details here.</p> -->
         <!--
       <p><span class="glyphicon glyphicon-map-marker"></span> Chicago, US</p>
       <p><span class="glyphicon glyphicon-phone"></span> +00 1515151515</p>
       <p><span class="glyphicon glyphicon-envelope"></span> myemail@something.com</p>
       -->
-    </div>
+    <!-- </div>
     <div class="col-sm-7 slideanim">
 
       <div class="row">
@@ -404,7 +404,7 @@ th, td {
         </div>
       </div>
   </div>
-</div>
+</div> -->
 
 
 <!-- Container (Services Section) -->
@@ -477,17 +477,17 @@ th, td {
     </div>
   </div><br>
 
-  <h2>What our customers say</h2>
-  <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
+  <!-- <h2>What our customers say</h2>
+  <div id="myCarousel" class="carousel slide text-center" data-ride="carousel"> -->
     <!-- Indicators -->
-    <ol class="carousel-indicators">
+    <!-- <ol class="carousel-indicators">
       <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
       <li data-target="#myCarousel" data-slide-to="1"></li>
       <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
+    </ol> -->
 
     <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
+    <!-- <div class="carousel-inner" role="listbox">
       <div class="item active">
         <h4>"This company is the best. I am so happy with the result!"<br><span>Michael Roe, Vice President, Comment Box</span></h4>
       </div>
@@ -497,22 +497,22 @@ th, td {
       <div class="item">
         <h4>"Could I... BE any more happy with this company?"<br><span>Chandler Bing, Actor, FriendsAlot</span></h4>
       </div>
-    </div>
+    </div> -->
 
     <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+    <!-- <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
     </a>
     <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
       <span class="sr-only">Next</span>
-    </a>
-  </div>
+    </a> -->
+  <!-- </div> -->
 </div>
 
 <!-- Container (Pricing Section) -->
-<div id="pricing" class="container-fluid">
+<!-- <div id="pricing" class="container-fluid">
   <div class="text-center">
     <h2>Pricing</h2>
     <h4>Choose a payment plan that works for you</h4>
@@ -575,8 +575,8 @@ th, td {
         </div>
       </div>
     </div>
-  </div>
-</div>
+  </div> -->
+<!-- </div> -->
 
 <!-- Container (Contact Section) -->
 <div id="contact" class="container-fluid bg-grey">
