--- a/index.html
+++ b/index.html
@@ -261,9 +261,19 @@ th, td {
 <div id="about" class="container-fluid">
   <div class="row">
     <div class="col-sm-8">
-      <h2>About Company Page</h2><br>
+
       <h4>Thinking Things Technologies(TTT) LLP is one of the fastest growing Engineering and IT Solutions venture.</h4><br>
-      <p>Our team comprises of people with expertise in providing solutions to Engineering and Manufacturing departments of various global organizations. We have gained deep understanding of typical challenges that an organization faces during a new/existing product lifecycle or trying to embrace disruptive paradigm shifts like Model-Based Enterprise (MBE) and Sensor-enabled Factory.</p>
+      <p>We aspire to mark our indelible impression in our area of services by providing quality solutions to our customers in a timely manner at affordable cost.
+The team TTT is a group of innovative techno entrepreneurs having rich experience in Engineering and IT Services having served a number of Engineering and IT majors of the world.
+
+The company is structured as follows
+	1. Engineering Services
+	2. IT Products
+
+We excel in the following areas
+	1. CAD/CAM/CMM SOLUTIONS
+	2. INTERNET OF THINGS
+	3. WEB / MOBILE SOLUTIONS</p>
       <p>Our exposure spans products in Aerospace, Power Generation, Oil &nbsp; Gas industries. We have people experienced in standardizing processes and automating PLM/CAD/CAM/CMM software. Our team with an average experience of ~15 years in Siemens applications (NX CAD/CAM/CMM/Teamcenter) along with strong IT &nbasp; engineering skills, can help our customers to achieve their desired quality &nbsp; financial objectives.</p>
       <!-- <br><button class="btn btn-default btn-lg">Get in Touch</button> -->
     </div>
