--- a/index.html
+++ b/index.html
@@ -265,14 +265,14 @@ th, td {
       <h4>Thinking Things Technologies(TTT) LLP is one of the fastest growing Engineering and IT Solutions venture.</h4><br>
       <p>We aspire to mark our indelible impression in our area of services by providing quality solutions to our customers in a timely manner at affordable cost.
 The team TTT is a group of innovative techno entrepreneurs having rich experience in Engineering and IT Services having served a number of Engineering and IT majors of the world.
-
-The company is structured as follows
-	1. Engineering Services
+<br>
+The company is structured as follows<br>
+	1. Engineering Services<br>
 	2. IT Products
-
-We excel in the following areas
-	1. CAD/CAM/CMM SOLUTIONS
-	2. INTERNET OF THINGS
+<br>
+We excel in the following areas<br>
+	1. CAD/CAM/CMM SOLUTIONS<br>
+	2. INTERNET OF THINGS<br>
 	3. WEB / MOBILE SOLUTIONS</p>
       <p>Our exposure spans products in Aerospace, Power Generation, Oil &nbsp; Gas industries. We have people experienced in standardizing processes and automating PLM/CAD/CAM/CMM software. Our team with an average experience of ~15 years in Siemens applications (NX CAD/CAM/CMM/Teamcenter) along with strong IT &nbasp; engineering skills, can help our customers to achieve their desired quality &nbsp; financial objectives.</p>
       <!-- <br><button class="btn btn-default btn-lg">Get in Touch</button> -->
