Engineering services linked

--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ We excel in the following areas<br>
 	1. CAD/CAM/CMM SOLUTIONS<br>
 	2. INTERNET OF THINGS<br>
 	3. WEB / MOBILE SOLUTIONS</p>
-    
+
       <!-- <br><button class="btn btn-default btn-lg">Get in Touch</button> -->
     </div>
     <div class="col-sm-4">
@@ -425,7 +425,7 @@ We excel in the following areas<br>
   <div class="row slideanim">
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-off logo-small"></span>
-      <h4>CAD/CAM/CMM SOLUTIONS </h4>
+      <h4><a href="#engservicing">CAD/CAM/CMM SOLUTIONS</a> </h4>
       <!-- <p>Lorem ipsum dolor sit amet..</p> -->
     </div>
     <div class="col-sm-4">
@@ -522,71 +522,44 @@ We excel in the following areas<br>
 </div>
 
 <!-- Container (Pricing Section) -->
-<!-- <div id="pricing" class="container-fluid">
-  <div class="text-center">
-    <h2>Pricing</h2>
-    <h4>Choose a payment plan that works for you</h4>
-  </div>
-  <div class="row slideanim">
-    <div class="col-sm-4 col-xs-12">
-      <div class="panel panel-default text-center">
-        <div class="panel-heading">
-          <h1>Basic</h1>
-        </div>
-        <div class="panel-body">
-          <p><strong>20</strong> Lorem</p>
-          <p><strong>15</strong> Ipsum</p>
-          <p><strong>5</strong> Dolor</p>
-          <p><strong>2</strong> Sit</p>
-          <p><strong>Endless</strong> Amet</p>
-        </div>
-        <div class="panel-footer">
-          <h3>$19</h3>
-          <h4>per month</h4>
-          <button class="btn btn-lg">Sign Up</button>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-4 col-xs-12">
-      <div class="panel panel-default text-center">
-        <div class="panel-heading">
-          <h1>Pro</h1>
-        </div>
-        <div class="panel-body">
-          <p><strong>50</strong> Lorem</p>
-          <p><strong>25</strong> Ipsum</p>
-          <p><strong>10</strong> Dolor</p>
-          <p><strong>5</strong> Sit</p>
-          <p><strong>Endless</strong> Amet</p>
-        </div>
-        <div class="panel-footer">
-          <h3>$29</h3>
-          <h4>per month</h4>
-          <button class="btn btn-lg">Sign Up</button>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-4 col-xs-12">
-      <div class="panel panel-default text-center">
-        <div class="panel-heading">
-          <h1>Premium</h1>
-        </div>
-        <div class="panel-body">
-          <p><strong>100</strong> Lorem</p>
-          <p><strong>50</strong> Ipsum</p>
-          <p><strong>25</strong> Dolor</p>
-          <p><strong>10</strong> Sit</p>
-          <p><strong>Endless</strong> Amet</p>
-        </div>
-        <div class="panel-footer">
-          <h3>$49</h3>
-          <h4>per month</h4>
-          <button class="btn btn-lg">Sign Up</button>
-        </div>
-      </div>
-    </div>
-  </div> -->
-<!-- </div> -->
+<div id="engservicing" class="container-fluid">
+  Our team comprises of people with expertise in providing solutions to Engineering and Manufacturing departments of various global organizations. We have gained deep understanding of typical challenges that an organization faces during a new/existing product lifecycle or trying to embrace disruptive paradigm shifts like Model-Based Enterprise (MBE) and Sensor-enabled Factory.
+
+  Our exposure spans products in Aerospace, Power Generation, Oil &nbsp; Gas industries. We have people experienced in standardizing processes and automating PLM/CAD/CAM/CMM software. Our team with an average experience of ~15 years in Siemens applications (NX CAD/CAM/CMM/Teamcenter) along with strong IT & engineering skills, can help our customers to achieve their desired quality & financial objectives.
+
+  At Xylem, we believe that high quality engineering applications can only be built with deep understanding of engineering processes and we count on our experience to ensure the same. Our customer-centric approach enables us to provide unique, extensible and sustainable solutions. We strongly believe that our candid partnership at each phase by following best management practices (Agile, etc) helps our customers to make continuous improvements.
+
+  We offer services in
+
+  Model-based Design Automation
+      - NX Open/Ufunc based automation solutions
+      - 3D PDF - Anark, Tetra4D, Adobe SDK automation
+      - NX Master modelling
+      - NX Validation/QA solutions
+      - PMI &nbsp; Ballooning automation
+
+  Model-based Manufacturing Automation
+      - NX Open/Ufunc based automation solutions
+      - CNC Postprocessors (milling, turning, mill-turn centers, muti-heads etc)
+      - Machine Simulation &nbsp; Verification (Vericut &nbsp; NX IS&nbsp;V)
+      - Shop documentation automation
+      - Feature-based machining solutions
+      - Standardization of CAM strategies (3, 3+2, 5-axis machining)
+
+  Model-based Inspection Automation
+      - NX Open/Ufunc based automation solutions
+      - NX CMM programming productivity solutions
+      - NX CMM &nbsp; PC-DMIS integration
+
+  NX Environment Customization (Native &nbsp; Teamcenter)
+      - Environment variables management
+      - CAD/CAM resource library setup
+      - Legacy library migration
+
+  Teamcenter Manufacturing Resource Manager
+      - Classification (Welding Processes)
+      - Customization (Rich-client, Server)
+</div>
 
 <!-- Container (Contact Section) -->
 <div id="contact" class="container-fluid bg-grey">
