--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ th, td {
         <li><a href="#mybookings">My BOOKINGS</a></li>
         <li><a href="#book">BOOK</a></li> -->
         <li><a href="#services">SERVICES</a></li>
-        <li><a href="#portfolio">PORTFOLIO</a></li>
+        <li><a href="#portfolio">SOLUTIONS</a></li>
         <!-- <li><a href="#pricing">PRICING</a></li> -->
         <li><a href="#contact">CONTACT</a></li>
       </ul>
@@ -267,11 +267,11 @@ th, td {
 The team TTT is a group of innovative techno entrepreneurs having rich experience in Engineering and IT Services having served a number of Engineering and IT majors of the world.
 <br>
 The company is structured as follows<br>
-	1. Engineering Services<br>
+	<a href="#engservices">1. Engineering Services</a><br>
 	2. IT Products
 <br>
 We excel in the following areas<br>
-	1. CAD/CAM/CMM SOLUTIONS<br>
+	<a href="#engservices">1. CAD/CAM/CMM SOLUTIONS</a><br>
 	2. INTERNET OF THINGS<br>
 	3. WEB / MOBILE SOLUTIONS</p>
 
@@ -425,7 +425,7 @@ We excel in the following areas<br>
   <div class="row slideanim">
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-off logo-small"></span>
-      <h4><a href="#engservicing">CAD/CAM/CMM SOLUTIONS</a> </h4>
+      <h4><a href="#engservices">CAD/CAM/CMM SOLUTIONS</a> </h4>
       <!-- <p>Lorem ipsum dolor sit amet..</p> -->
     </div>
     <div class="col-sm-4">
@@ -522,43 +522,43 @@ We excel in the following areas<br>
 </div>
 
 <!-- Container (Pricing Section) -->
-<div id="engservicing" class="container-fluid">
+<div id="engservices" class="container-fluid">
   Our team comprises of people with expertise in providing solutions to Engineering and Manufacturing departments of various global organizations. We have gained deep understanding of typical challenges that an organization faces during a new/existing product lifecycle or trying to embrace disruptive paradigm shifts like Model-Based Enterprise (MBE) and Sensor-enabled Factory.
-
+  <br>
   Our exposure spans products in Aerospace, Power Generation, Oil &nbsp; Gas industries. We have people experienced in standardizing processes and automating PLM/CAD/CAM/CMM software. Our team with an average experience of ~15 years in Siemens applications (NX CAD/CAM/CMM/Teamcenter) along with strong IT & engineering skills, can help our customers to achieve their desired quality & financial objectives.
-
+<br>
   At Xylem, we believe that high quality engineering applications can only be built with deep understanding of engineering processes and we count on our experience to ensure the same. Our customer-centric approach enables us to provide unique, extensible and sustainable solutions. We strongly believe that our candid partnership at each phase by following best management practices (Agile, etc) helps our customers to make continuous improvements.
-
+<br>
   We offer services in
+<br>
+  Model-based Design Automation<br>
+      - NX Open/Ufunc based automation solutions<br>
+      - 3D PDF - Anark, Tetra4D, Adobe SDK automation<br>
+      - NX Master modelling<br>
+      - NX Validation/QA solutions<br>
+      - PMI &nbsp; Ballooning automation<br>
 
-  Model-based Design Automation
-      - NX Open/Ufunc based automation solutions
-      - 3D PDF - Anark, Tetra4D, Adobe SDK automation
-      - NX Master modelling
-      - NX Validation/QA solutions
-      - PMI &nbsp; Ballooning automation
+  Model-based Manufacturing Automation<br>
+      - NX Open/Ufunc based automation solutions<br>
+      - CNC Postprocessors (milling, turning, mill-turn centers, muti-heads etc)<br>
+      - Machine Simulation &nbsp; Verification (Vericut &nbsp; NX IS&nbsp;V)<br>
+      - Shop documentation automation<br>
+      - Feature-based machining solutions<br>
+      - Standardization of CAM strategies (3, 3+2, 5-axis machining)<br>
 
-  Model-based Manufacturing Automation
-      - NX Open/Ufunc based automation solutions
-      - CNC Postprocessors (milling, turning, mill-turn centers, muti-heads etc)
-      - Machine Simulation &nbsp; Verification (Vericut &nbsp; NX IS&nbsp;V)
-      - Shop documentation automation
-      - Feature-based machining solutions
-      - Standardization of CAM strategies (3, 3+2, 5-axis machining)
+  Model-based Inspection Automation<br>
+      - NX Open/Ufunc based automation solutions<br>
+      - NX CMM programming productivity solutions<br>
+      - NX CMM &nbsp; PC-DMIS integration<br>
 
-  Model-based Inspection Automation
-      - NX Open/Ufunc based automation solutions
-      - NX CMM programming productivity solutions
-      - NX CMM &nbsp; PC-DMIS integration
+  NX Environment Customization (Native &nbsp; Teamcenter)<br>
+      - Environment variables management<br>
+      - CAD/CAM resource library setup<br>
+      - Legacy library migration<br>
 
-  NX Environment Customization (Native &nbsp; Teamcenter)
-      - Environment variables management
-      - CAD/CAM resource library setup
-      - Legacy library migration
-
-  Teamcenter Manufacturing Resource Manager
-      - Classification (Welding Processes)
-      - Customization (Rich-client, Server)
+  Teamcenter Manufacturing Resource Manager<br>
+      - Classification (Welding Processes)<br>
+      - Customization (Rich-client, Server)<br>
 </div>
 
 <!-- Container (Contact Section) -->
