--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ th, td {
         <li><a href="#mybookings">My BOOKINGS</a></li>
         <li><a href="#book">BOOK</a></li> -->
         <li><a href="#services">SERVICES</a></li>
-        <li><a href="#portfolio">SOLUTIONS</a></li>
+        <li><a href="#portfolio">PRODUCTS</a></li>
         <!-- <li><a href="#pricing">PRICING</a></li> -->
         <li><a href="#contact">CONTACT</a></li>
       </ul>
@@ -461,7 +461,7 @@ We excel in the following areas<br>
 
 <!-- Container (Portfolio Section) -->
 <div id="portfolio" class="container-fluid text-center bg-grey">
-  <h2>Portfolio</h2><br>
+  <h2>Products</h2><br>
   <h4>What we have created</h4>
   <div class="row text-center slideanim">
     <div class="col-sm-4">
