Location has changed

--- a/index.html
+++ b/index.html
@@ -467,28 +467,19 @@ We excel in the following areas<br>
     <div class="col-sm-4">
       <div class="thumbnail">
         <img src="img\paris.jpg" alt="Paris" width="400" height="300">
-        <p><strong>Paris</strong></p>
-        <p>Yes, we built Paris</p>
+        <p><strong>Smart Clinic</strong></p>
+        <p>Yes, we built Smart Clinic</p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
         <img src="img\newyork.jpg" alt="New York" width="400" height="300">
-        <p><strong>New York</strong></p>
-        <p>We built New York</p>
+        <p><strong>Smart Cab</strong></p>
+        <p>We built Smart Cab</p>
       </div>
     </div>
-    <div class="col-sm-4">
-      <div class="thumbnail">
-        <img src="img\sanfran.jpg" alt="San Francisco" width="400" height="300">
-        <p><strong>San Francisco</strong></p>
-        <p>Yes, San Fran is ours</p>
-      </div>
-    </div>
+
   </div><br>
-
-
-</div>
 
 <!-- Container (Pricing Section) -->
 <div id="engservices" class="container-fluid">
@@ -529,17 +520,17 @@ We excel in the following areas<br>
   Teamcenter Manufacturing Resource Manager<br>
       - Classification (Welding Processes)<br>
       - Customization (Rich-client, Server)<br>
+ </div>
 </div>
-
 <!-- Container (Contact Section) -->
 <div id="contact" class="container-fluid bg-grey">
   <h2 class="text-center">CONTACT</h2>
   <div class="row">
     <div class="col-sm-5">
       <p>Contact us and we'll get back to you within 24 hours.</p>
-      <p><span class="glyphicon glyphicon-map-marker"></span> Chicago, US</p>
-      <p><span class="glyphicon glyphicon-phone"></span> +00 1515151515</p>
-      <p><span class="glyphicon glyphicon-envelope"></span> myemail@something.com</p>
+      <p><span class="glyphicon glyphicon-map-marker"></span> #410, 4B Main, OMBR Layout, Banasawadi, Banagalore</p>
+      <p><span class="glyphicon glyphicon-phone"></span> +91 9448476108</p>
+      <p><span class="glyphicon glyphicon-envelope"></span> tonyvalavi@gmail.com</p>
     </div>
     <div class="col-sm-7 slideanim">
       <div class="row">
@@ -564,7 +555,7 @@ We excel in the following areas<br>
 <div id="googleMap" style="height:400px;width:100%;"></div>
 <script>
 function myMap() {
-var myCenter = new google.maps.LatLng(41.878114, -87.629798);
+var myCenter = new google.maps.LatLng(12.9852323, 77.669943);
 var mapProp = {center:myCenter, zoom:12, scrollwheel:false, draggable:false, mapTypeId:google.maps.MapTypeId.ROADMAP};
 var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
 var marker = new google.maps.Marker({position:myCenter});
