--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@ We excel in the following areas<br>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="img\newyork.jpg" alt="New York" width="400" height="300">
+        <img src="img\smartclinic.jpg" alt="New York" width="400" height="300">
         <p><strong>Smart Cab</strong></p>
         <p>We built Smart Cab</p>
       </div>
