Changed Image Size

--- a/index.html
+++ b/index.html
@@ -466,14 +466,14 @@ We excel in the following areas<br>
   <div class="row text-center slideanim">
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="img\paris.jpg" alt="Paris" width="400" height="300">
+        <img src="img\smartclinic.jpg" alt="Paris" width="400" height="300">
         <p><strong>Smart Clinic</strong></p>
         <p>Yes, we built Smart Clinic</p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="img\smartclinic.jpg" alt="New York" width="400" height="300">
+        <img src="img\newyork.jpg" alt="New York" width="400" height="300">
         <p><strong>Smart Cab</strong></p>
         <p>We built Smart Cab</p>
       </div>
@@ -555,7 +555,7 @@ We excel in the following areas<br>
 <div id="googleMap" style="height:400px;width:100%;"></div>
 <script>
 function myMap() {
-var myCenter = new google.maps.LatLng(12.9852323, 77.669943);
+var myCenter = new google.maps.LatLng(13.009511, 77.651023);
 var mapProp = {center:myCenter, zoom:12, scrollwheel:false, draggable:false, mapTypeId:google.maps.MapTypeId.ROADMAP};
 var map = new google.maps.Map(document.getElementById("googleMap"),mapProp);
 var marker = new google.maps.Marker({position:myCenter});
