--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@ We excel in the following areas<br>
   <div class="row text-center slideanim">
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="img\smartclinic.jpg" alt="Paris" width="400" height="300">
+        <img src="img\smartclinic1.jpg" alt="Paris" width="400" height="300">
         <p><strong>Smart Clinic</strong></p>
         <p>Yes, we built Smart Clinic</p>
       </div>
