Used list for sections

--- a/index.html
+++ b/index.html
@@ -244,17 +244,6 @@ th, td {
 
 <div class="jumbotron text-center">
   <h1>Thinking Things Technologies</h1>
-  <!-- <p>We specialize in local travel</p> -->
-    <!--
-  <form>
-    <div class="input-group">
-      <input type="email" class="form-control" size="50" placeholder="Email Address" required>
-      <div class="input-group-btn">
-        <button type="button" class="btn btn-danger">Subscribe</button>
-      </div>
-    </div>
-  </form>
-  -->
 </div>
 
 <!-- Container (About Section) -->
@@ -262,14 +251,16 @@ th, td {
   <div class="row">
     <div class="col-sm-8">
 
-      <h4>Thinking Things Technologies(TTT) LLP is one of the fastest growing Engineering and IT Solutions venture.</h4><br>
+      <h4>Thinking Things Technologies(TTT) is one of the fastest growing Engineering and IT Solutions venture.</h4><br>
       <p>We aspire to mark our indelible impression in our area of services by providing quality solutions to our customers in a timely manner at affordable cost.
-The team TTT is a group of innovative techno entrepreneurs having rich experience in Engineering and IT Services having served a number of Engineering and IT majors of the world.
-<br>
-The company is structured as follows<br>
-	<a href="#engservices">1. Engineering Services</a><br>
-	2. IT Products
-<br>
+        The team TTT is a group of innovative techno entrepreneurs having rich experience in Engineering and IT Services having served a number of Engineering and IT majors of the world.
+        <br>
+        The company is structured as follows<br>
+        <ul class="nav navbar-nav navbar-left">
+          <li><a href="#engservices">Engineering Services</a></li>
+          <li><a href="#engservices">Product Services</a></li>
+        </ul>  
+        <br>
 We excel in the following areas<br>
 	<a href="#engservices">1. CAD/CAM/CMM SOLUTIONS</a><br>
 	2. INTERNET OF THINGS<br>
