--- a/index.html
+++ b/index.html
@@ -256,18 +256,17 @@ th, td {
         The team TTT is a group of innovative techno entrepreneurs having rich experience in Engineering and IT Services having served a number of Engineering and IT majors of the world.
         <br>
         The company is structured as follows<br>
-        <ul class="nav navbar-nav navbar-left">
+        <ul>
           <li><a href="#engservices">Engineering Services</a></li>
           <li><a href="#engservices">Product Services</a></li>
-        </ul>  
-        <br>
-We excel in the following areas<br>
-	<a href="#engservices">1. CAD/CAM/CMM SOLUTIONS</a><br>
-	2. INTERNET OF THINGS<br>
-	3. WEB / MOBILE SOLUTIONS</p>
-
-      <!-- <br><button class="btn btn-default btn-lg">Get in Touch</button> -->
-    </div>
+        </ul>
+        We excel in the following areas<br>
+        <ul>
+	       <li><a href="#engservices">CAD/CAM/CMM SOLUTIONS</a></li>
+	       <li>INTERNET OF THINGS</li><br>
+	       <li>WEB / MOBILE SOLUTIONS</li>
+       </ul>
+     </div>
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-signal logo"></span>
     </div>
